# gopass_export

./: .gitignore  README.md  functions.py  main.py  pyproject.toml  secret.py
